Update .gitlab-ci.yml: skip tests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 master:
     script:
-        - mvn source:jar deploy -B
+        - mvn source:jar deploy -B -DskipTests
     tags:
         - mvn
     only:
