--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,10 @@
 			<classifier>models</classifier>
 		</dependency>
 		<dependency>
+			<groupId>edu.stanford.nlp</groupId>
+			<artifactId>stanford-corenlp</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>edu.kit.ipd.parse</groupId>
 			<artifactId>ontology_connection</artifactId>
 		</dependency>
