--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<groupId>edu.kit.ipd.parse</groupId>
-	<artifactId>ContextAnalyzer</artifactId>
+	<artifactId>context</artifactId>
 	<version>0.0.2-SNAPSHOT</version>
 	<description>	</description>
 	<repositories>
