--- a/pom.xml
+++ b/pom.xml
@@ -93,11 +93,13 @@
 		<dependency>
 			<groupId>edu.stanford.nlp</groupId>
 			<artifactId>stanford-corenlp</artifactId>
-			<classifier>models</classifier>
+			<version>3.8.0</version>
 		</dependency>
 		<dependency>
 			<groupId>edu.stanford.nlp</groupId>
 			<artifactId>stanford-corenlp</artifactId>
+			<version>3.8.0</version>
+			<classifier>models</classifier>
 		</dependency>
 		<dependency>
 			<groupId>edu.kit.ipd.parse</groupId>
