--- a/pom.xml
+++ b/pom.xml
@@ -3,26 +3,24 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>edu.kit.ipd.parse</groupId>
-		<artifactId>parent</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<artifactId>parse</artifactId>
+		<version>0.0.2</version>
 	</parent>
-	<groupId>edu.kit.ipd.parse</groupId>
 	<artifactId>context</artifactId>
 	<version>0.0.2-SNAPSHOT</version>
-	<description>	</description>
+	<description>Context Model powered by heyfish</description>
 	<repositories>
 		<repository>
-			<id>ipdNexus</id>
-			<name>IPD-Repository</name>
-			<url>http://bob.ipd.kit.edu/nexus/content/repositories/public/</url>
-		</repository>
+        	<id>ipdNexus-public-releases</id>
+        	<name>IPD-Repository</name>
+            <url>http://bob.ipd.kit.edu/nexus/repository/maven-public-releases</url>
+        </repository>
 	</repositories>
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.3.1</version>
 				<configuration>
 					<outputDirectory>${parse_bundle.directory}/plugins</outputDirectory>
 				</configuration>
@@ -30,7 +28,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
-				<version>3.0.0</version>
 				<executions>
 					<execution>
 						<id>copy-dependencies</id>
