--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,17 @@
 master:
     script:
-        - mvn source:jar deploy -B -DskipTests
+        - mvn -U clean source:jar deploy -B -DskipTests -DforkCount=0
     tags:
         - mvn
     only:
+        - master
+
+branches:
+    script:
+        - mvn test -U -B -DskipTests -DforkCount=0
+    tags:
+        - mvn
+    only:
+        - branches
+    except:
         - master
