--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 master:
     script:
-        - mvn -U clean source:jar deploy -B -DskipTests -DforkCount=0
+        - mvn -U clean source:jar deploy -B -DforkCount=0
     tags:
         - mvn
     only:
@@ -8,7 +8,7 @@ master:
 
 branches:
     script:
-        - mvn test -U -B -DskipTests -DforkCount=0
+        - mvn test -U -B -DforkCount=0
     tags:
         - mvn
     only:
