changed version to -eval

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>0.0.5-SNAPSHOT</version>
     </parent>
     <artifactId>context</artifactId>
-    <version>0.0.4-SNAPSHOT</version>
+    <version>0.0.4-eval-SNAPSHOT</version>
     <description>Context Model powered by heyfish</description>
     <repositories>
         <repository>
