--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <artifactId>context</artifactId>
-    <version>0.0.4-eval-SNAPSHOT</version>
-    <description>Context Model powered by heyfish</description>
+    <version>0.0.5-eval-SNAPSHOT</version>
+    <name>Context Model Generator</name>
     <repositories>
         <repository>
             <id>ipdNexus-public-releases</id>
@@ -23,7 +23,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
-                    <outputDirectory>${parse_bundle.directory}/plugins</outputDirectory>
+                    <outputDirectory>${pronat_bundle.directory}/plugins</outputDirectory>
                 </configuration>
             </plugin>
             <plugin>
@@ -54,31 +54,26 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
-
-
         <dependency>
             <groupId>org.kohsuke.metainf-services</groupId>
             <artifactId>metainf-services</artifactId>
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>edu.kit.ipd.parse</groupId>
-            <artifactId>ShallowNLP</artifactId>
+            <groupId>edu.kit.ipd.pronat</groupId>
+            <artifactId>shallow_nlp</artifactId>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>net.sf.extjwnl</groupId>
             <artifactId>extjwnl</artifactId>
@@ -92,6 +87,7 @@
         <dependency>
             <groupId>edu.kit.ipd.parse</groupId>
             <artifactId>ontology_connection</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>info.debatty</groupId>
@@ -99,36 +95,42 @@
             <version>RELEASE</version>
         </dependency>
         <dependency>
-            <groupId>edu.kit.ipd.parse</groupId>
+            <groupId>edu.kit.ipd.pronat</groupId>
             <artifactId>ner</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>edu.kit.ipd.parse</groupId>
             <artifactId>luna</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>edu.kit.ipd.parse</groupId>
-            <artifactId>graphBuilder</artifactId>
+            <groupId>edu.kit.ipd.pronat</groupId>
+            <artifactId>graph_builder</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>edu.kit.ipd.parse</groupId>
-            <artifactId>wsd</artifactId>
+            <groupId>edu.kit.ipd.pronat</groupId>
+            <artifactId>babelfy_wsd</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>edu.kit.ipd.parse</groupId>
+            <groupId>edu.kit.ipd.pronat</groupId>
             <artifactId>condition_detection</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>edu.kit.ipd.parse</groupId>
-            <artifactId>SRLabeler</artifactId>
+            <groupId>edu.kit.ipd.pronat</groupId>
+            <artifactId>srl</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>edu.kit.ipd.pronat</groupId>
+            <artifactId>pre_pipeline_data_model</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
     <properties>
-        <parse_bundle.directory>../parse_bundle</parse_bundle.directory>
+        <pronat_bundle.directory>../pronat_bundle</pronat_bundle.directory>
     </properties>
 </project>
